log
Thu 24 Aug 2023 04:23:50 PM UTC: 
 tests:  0|6
total_score: 0/70
29755a2
Thu 24 Aug 2023 04:40:05 PM UTC: 
 list.c | 47 +++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 45 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:3: error: expected ‘,’ or ‘;’ before ‘if’
   40 |   if(newList == NULL)
      |   ^~
Compilation failed
4042eb6
Thu 24 Aug 2023 04:40:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5eded35
Thu 24 Aug 2023 04:45:02 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:7: error: ‘newList’ undeclared (first use in this function); did you mean ‘newlist’?
   40 |   if (newList == NULL)
      |       ^~~~~~~
      |       newlist
list.c:40:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:9: error: unused variable ‘newlist’ [-Werror=unused-variable]
   38 |   List* newlist = (List *) malloc(sizeof(List));
      |         ^~~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f06c4a6
Thu 24 Aug 2023 04:45:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5da16b4
Thu 24 Aug 2023 04:45:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5e3163c
Thu 24 Aug 2023 04:45:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2d4137f
Thu 24 Aug 2023 04:47:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e3910e
Thu 24 Aug 2023 04:50:25 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
a653d67
Thu 24 Aug 2023 04:50:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c8269c3
